# Ganoderma-Paper-RAG-System-

./: .env.example  .gitignore  GITHUB_GUIDE.md  QUICKSTART.md  README.md  TESTING.md  USAGE.md  docker-compose.yml  pyproject.toml  schema.sql  stress_test_output.txt  test_config.py
airflow/dags/: papers_ingestion.py
data/processed/: PMC11792735_chunks.json  PMC11792735_parsed.json  all_chunks.json
docs/: IMPLEMENTATION_PLAN.md  SYSTEM_OVERVIEW.md  TASK_LIST.md
scripts/: auto_ingest.py  batch_download.py  check_ollama.py  debug_connection.py  debug_deep.py  debug_final.py  debug_rag_generator.py  debug_regen.py  debug_scraper.py  debug_scraper_single.py  init_db.py  inspect_titles.py  launch_api.py  launch_ui.py  manual_download.py  patch_metadata.py  regenerate_kb.py  test_pdf_download.py  test_pdf_processing.py  test_rag_system.py  test_scraper.py  test_system.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/processors/: __init__.py  embedder.py  metadata_tagger.py  pdf_parser.py  text_chunker.py
src/rag/: __init__.py  generator.py  retriever.py
src/scrapers/: ganoderma_news.py  pdf_downloader.py  pmc_direct.py
src/ui/: __init__.py  gradio_app.py
